<resources>
    <string name="app_name">Lab3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="motley_crue">Mötley Crüe</string>
    <string name="motley_crue_web_site">www.motley.com</string>
    <string name="action_settings">Settings</string>
    <string name="MercedesBenz2015">Mercedes - Benz</string>
    <string name="MBGeländewagen">Mercedes Geländewagen</string>
    <string name="MBGLECoupe63">Mercedes-AMG GLE 63 Coupe</string>
    <string name="MBGTS">Mercedes-AMG GT S</string>
    <string name="MBC63">Mercedes-AMG C 63</string>
    <string name="start">START</string>
    <string name="cars">CARS</string>
    <string name="mp3_01">https://dl.dropboxusercontent.com/content_link/82FIBDYa2fjuZF6J4KsljB9g8gVbDeYZb5XZbtdtPD1yBVNbA042h3DpATN0dgH9/file</string>
    <string name="mp3_02">https://dl.dropboxusercontent.com/content_link/PbNQ3uVvF8d3PQODWZXhtDpNq9B6naDBT92F8HMWV1b5deo6oxM92SdwAL3JtSQN/file</string>
    <string name="mp3_03">https://dl.dropboxusercontent.com/content_link/7I6Y2wVHHhAp5e87AyRMJDzqPDIfuNdOalxnjzCKLfr7v3pUQNKkMna3Z44uRsjw/file</string>
    <string name="mp3_04">https://dl.dropboxusercontent.com/content_link/tS1JzHoXYCAZ0PzTwyHP0XTw0TAvjKWRDelCGr9T334slA8yf7J71pPU7uORc6Gh/file</string>
    <string name="mp3_tormoza">https://dl.dropboxusercontent.com/content_link/3KqAWGeD9kgkobgvnHamCPxNo6pqqPWI3P6ARhuwosNUmuTZ6tDn377sv8TY7y6I/file</string>
    <string-array name="image_ids">
        <item>@drawable/c01</item>
        <item>@drawable/c02</item>
        <item>@drawable/c03</item>
        <item>@drawable/c04</item>
        <item>@drawable/c05</item>
        <item>@drawable/c06</item>
        <item>@drawable/c07</item>
        <item>@drawable/g01</item>
        <item>@drawable/g02</item>
        <item>@drawable/g03</item>
        <item>@drawable/g04</item>
        <item>@drawable/g05</item>
        <item>@drawable/g06</item>
        <item>@drawable/g07</item>
        <item>@drawable/gle01</item>
        <item>@drawable/gle02</item>
        <item>@drawable/gle03</item>
        <item>@drawable/gle04</item>
        <item>@drawable/gle05</item>
        <item>@drawable/gle06</item>
        <item>@drawable/gle07</item>
        <item>@drawable/gts01</item>
        <item>@drawable/gts02</item>
        <item>@drawable/gts03</item>
        <item>@drawable/gts04</item>
        <item>@drawable/gts05</item>
        <item>@drawable/gts06</item>
        <item>@drawable/gts07</item>
    </string-array>
</resources>
